[gd_scene format=3 uid="uid://lx7lqcxe7y33"]

[ext_resource type="Texture2D" uid="uid://b3wn0wh1rlmk4" path="res://assets/enemak_anim.png" id="1_7p1mj"]
[ext_resource type="Script" uid="uid://cn3whfd2wtopm" path="res://scripts/enemy.gd" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://c1tmw18xamn71" path="res://laser_bullet.tscn" id="2_4ra3w"]
[ext_resource type="Script" uid="uid://c1d7lg1r6hlrn" path="res://scripts/hitbox.gd" id="4_5uy6h"]
[ext_resource type="Texture2D" uid="uid://cohb6u8a7d5fe" path="res://assets/explosion.png" id="4_c4w8v"]
[ext_resource type="AudioStream" uid="uid://bnk4od5gq4f1x" path="res://assets/sound effects/drone_getting_damage.ogg" id="6_dmgsnd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_md0e3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ra3w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(1000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uy6h"]
atlas = ExtResource("1_7p1mj")
region = Rect2(2000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w8v"]
atlas = ExtResource("1_7p1mj")
region = Rect2(3000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwavj"]
atlas = ExtResource("1_7p1mj")
region = Rect2(4000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_nenq2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(5000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_md484"]
atlas = ExtResource("1_7p1mj")
region = Rect2(6000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipns3"]
atlas = ExtResource("1_7p1mj")
region = Rect2(7000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qclf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(8000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8i8w"]
atlas = ExtResource("1_7p1mj")
region = Rect2(9000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_otmr2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(10000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq4b"]
atlas = ExtResource("1_7p1mj")
region = Rect2(11000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0cyh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(12000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0wcc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(13000, 1200, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ycm"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcg2"]
atlas = ExtResource("1_7p1mj")
region = Rect2(1000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ile5s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(2000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1x4g4"]
atlas = ExtResource("1_7p1mj")
region = Rect2(3000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pwtc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(4000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_rogs8"]
atlas = ExtResource("1_7p1mj")
region = Rect2(5000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrm80"]
atlas = ExtResource("1_7p1mj")
region = Rect2(6000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6awcb"]
atlas = ExtResource("1_7p1mj")
region = Rect2(7000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjec0"]
atlas = ExtResource("1_7p1mj")
region = Rect2(8000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4rgx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(9000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mchx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(10000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3vcr"]
atlas = ExtResource("1_7p1mj")
region = Rect2(11000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaulx"]
atlas = ExtResource("1_7p1mj")
region = Rect2(12000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f82d"]
atlas = ExtResource("1_7p1mj")
region = Rect2(13000, 0, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lioqc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lg75"]
atlas = ExtResource("1_7p1mj")
region = Rect2(1000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsnsy"]
atlas = ExtResource("1_7p1mj")
region = Rect2(2000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_thsr5"]
atlas = ExtResource("1_7p1mj")
region = Rect2(3000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekh6n"]
atlas = ExtResource("1_7p1mj")
region = Rect2(4000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sbpf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(5000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_78kod"]
atlas = ExtResource("1_7p1mj")
region = Rect2(6000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_605iw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(7000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6q4o"]
atlas = ExtResource("1_7p1mj")
region = Rect2(8000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tuss"]
atlas = ExtResource("1_7p1mj")
region = Rect2(9000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v6cf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(10000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_vab5u"]
atlas = ExtResource("1_7p1mj")
region = Rect2(11000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiusc"]
atlas = ExtResource("1_7p1mj")
region = Rect2(12000, 3600, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7m"]
atlas = ExtResource("1_7p1mj")
region = Rect2(0, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya47j"]
atlas = ExtResource("1_7p1mj")
region = Rect2(1000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyejq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(2000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0dkt"]
atlas = ExtResource("1_7p1mj")
region = Rect2(3000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sdxul"]
atlas = ExtResource("1_7p1mj")
region = Rect2(4000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7lhw"]
atlas = ExtResource("1_7p1mj")
region = Rect2(5000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_gst0f"]
atlas = ExtResource("1_7p1mj")
region = Rect2(6000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_sm4rh"]
atlas = ExtResource("1_7p1mj")
region = Rect2(7000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lniq"]
atlas = ExtResource("1_7p1mj")
region = Rect2(8000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w3jn"]
atlas = ExtResource("1_7p1mj")
region = Rect2(9000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiwvf"]
atlas = ExtResource("1_7p1mj")
region = Rect2(10000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pw1s"]
atlas = ExtResource("1_7p1mj")
region = Rect2(11000, 2400, 1000, 1200)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5geg"]
atlas = ExtResource("1_7p1mj")
region = Rect2(12000, 2400, 1000, 1200)

[sub_resource type="SpriteFrames" id="SpriteFrames_8tegq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md0e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ra3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uy6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwavj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nenq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md484")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipns3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qclf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8i8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otmr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0cyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0wcc")
}],
"loop": true,
"name": &"attack_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ile5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1x4g4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pwtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rogs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrm80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6awcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjec0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4rgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mchx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3vcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaulx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f82d")
}],
"loop": true,
"name": &"attack_front",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lioqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lg75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsnsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thsr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekh6n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sbpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78kod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_605iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6q4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tuss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v6cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vab5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiusc")
}],
"loop": true,
"name": &"idle_back",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya47j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyejq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0dkt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sdxul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7lhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gst0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sm4rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lniq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w3jn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiwvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pw1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5geg")
}],
"loop": true,
"name": &"idle_front",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_g0yyi"]
atlas = ExtResource("4_c4w8v")
region = Rect2(0, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_5utat"]
atlas = ExtResource("4_c4w8v")
region = Rect2(1000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b4fd"]
atlas = ExtResource("4_c4w8v")
region = Rect2(2000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_13roy"]
atlas = ExtResource("4_c4w8v")
region = Rect2(3000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5akt"]
atlas = ExtResource("4_c4w8v")
region = Rect2(4000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lt7r"]
atlas = ExtResource("4_c4w8v")
region = Rect2(5000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_tysqt"]
atlas = ExtResource("4_c4w8v")
region = Rect2(6000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbbx4"]
atlas = ExtResource("4_c4w8v")
region = Rect2(7000, 0, 1000, 1000)

[sub_resource type="AtlasTexture" id="AtlasTexture_x24ca"]
atlas = ExtResource("4_c4w8v")
region = Rect2(8000, 0, 1000, 1000)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yi8r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0yyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5utat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b4fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13roy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5akt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lt7r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tysqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbbx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x24ca")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ra3w"]
radius = 100.0
height = 440.00003

[sub_resource type="CircleShape2D" id="CircleShape2D_4ra3w"]
radius = 39.623226

[node name="Enemy" type="CharacterBody2D" unique_id=2123163950]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_md0e3")
bullet_scene = ExtResource("2_4ra3w")
bullet_color = Color(0.54901963, 0.16470589, 0.12941177, 1)

[node name="FrontLeftPoint" type="Node2D" parent="." unique_id=1575710435]
position = Vector2(-26, -78)
scale = Vector2(0.15, 0.15)

[node name="BackLeftPoint" type="Node2D" parent="." unique_id=192126856]
position = Vector2(-46, -97)
scale = Vector2(0.15, 0.15)

[node name="BackRightPoint" type="Node2D" parent="." unique_id=1870589343]
position = Vector2(46, -97)
scale = Vector2(0.15, 0.15)

[node name="FrontRightPoint" type="Node2D" parent="." unique_id=1313445959]
position = Vector2(26, -78)
scale = Vector2(0.15, 0.15)

[node name="EnemySprite" type="AnimatedSprite2D" parent="." unique_id=989445584]
position = Vector2(0, -90)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_8tegq")
animation = &"idle_front"
autoplay = "idle_front"
flip_h = true

[node name="Explosion" type="AnimatedSprite2D" parent="." unique_id=1625619941]
position = Vector2(0, -133)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_3yi8r")
frame = 8
frame_progress = 1.0

[node name="Collision" type="CollisionShape2D" parent="." unique_id=17214228]
position = Vector2(0, -10)
rotation = -1.5707964
scale = Vector2(0.099999994, 0.099999994)
shape = SubResource("CapsuleShape2D_4ra3w")

[node name="Hitbox" type="Area2D" parent="." unique_id=1159251631]
collision_layer = 8
collision_mask = 4
script = ExtResource("4_5uy6h")

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox" unique_id=980528499]
position = Vector2(0, -133)
shape = SubResource("CircleShape2D_4ra3w")
debug_color = Color(0.99533767, 0, 0.21488929, 0.41960785)

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dmgsnd")
